--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,26 @@
 {
-  "extends": "next/core-web-vitals"
+    "env": {
+        "browser": true,
+        "es2021": true
+    },
+    "extends": [
+        "standard-with-typescript",
+        "plugin:react/recommended"
+    ],
+    "parserOptions": {
+        "ecmaVersion": "latest",
+        "sourceType": "module"
+    },
+    "plugins": [
+        "react"
+    ],
+    "rules": {
+        "prefer-const": "error",
+        "@typescript-eslint/ban-ts-comment": "off",
+        "@typescript-eslint/ban-types": "warn",
+        "react/display-name": "off",
+        "@typescript-eslint/no-var-requires": "off",
+        "no-unreachable": "error",
+        "@typescript-eslint/no-unused-vars": "error",
+      },
 }
